--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -1,6 +1,19 @@
 spring:
   application:
-    name: catalog-service
+    name: catalog-service # 설정 서버에서 설정을 필터링 하는 데 사용하는 애플리케이션이 이름.
+  config:
+    import: "optional:configserver:" # 가능하면 컨피그 서버에서 설정 데이터를 가져온다.
+  cloud:
+    config:
+      uri: http://localhost:8888 # 설정 서버의 URL.
+      request-connect-timeout: 5000 # 설정 서버에 연결될 때까지 기다리는 시간(밀리초)
+      request-read-timeout: 5000 # 설정 서버에서 설정 데이터를 읽을 때까지 기다리는 시간(밀리초)
+      fail-fast: true # 설정 서버 연결 실패를 치명적 오류로 인식.
+      retry:
+        max-attempts: 6 # 시도 최대 횟수.
+        initial-interval: 1000 # 최초 재시도 지연 시간(밀리초)
+        max-interval: 2000 # 재시도 지연 최대 시간(밀리초)
+        multiplier: 1.1 # 지연 시간 계산 승수.
 
 server:
   port: 9001
@@ -13,3 +26,11 @@ server:
 
 polar: #bulid 폴더의 META-INF 폴더 안에 자동 생성되어 있음!
   greeting: Weclome to local book catalog!
+
+
+# 스프링 부트 액추에이터 설정을 사용한 refresh 엔드포인트 활성화.
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh # HTTP를 통해 /actuator/refresh 엔드포인트를 노출함.
