--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -11,12 +11,18 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
+      
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 17
           cache: gradle  
+
+      - name: Set environment variable for Config Server URL
+        run: |
+          echo "SPRING_CLOUD_CONFIG_URI=http://localhost:8888" >> $GITHUB_ENV
+      
       - name: Code vulnerability scanning
         uses: anchore/scan-action@v3
         id: scan
@@ -24,11 +30,13 @@ jobs:
           path: "${{ github.workspace }}"
           fail-build: false
           severity-cutoff: high
+      
       - name: Upload vulnerability report
         uses: github/codeql-action/upload-sarif@v3
         if: success() || failure()
         with:
           sarif_file: ${{ steps.scan.outputs.sarif }}
+      
       - name: Build, unit tests and integration tests
         working-directory: catalog-service
         run: |
