--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -1,6 +1,11 @@
 name: Commit Stage
 on: push
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: eodoha/catalog-service
+  VERSION: latest
+
 jobs:
   build:
     name: Build and Test
@@ -17,18 +22,7 @@ jobs:
         with:
           distribution: temurin
           java-version: 17
-          cache: gradle  
-
-      # # Config 서버 URL을 환경 변수로 설정
-      # - name: Set Config Server URL as environment variable
-      #   run: |
-      #     echo "CONFIG_SERVER_URL=${{ secrets.CONFIG_SERVER_URL }}" >> $GITHUB_ENV
-
-      # # Config 서버 URL이 비어 있지 않으면 실행
-      # - name: Set environment variable for Config Server URL
-      #   if: ${{ env.CONFIG_SERVER_URL != '' }}
-      #   run: |
-      #     echo "SPRING_CLOUD_CONFIG_URI=${{ env.CONFIG_SERVER_URL }}" >> $GITHUB_ENV
+          cache: gradle
       
       - name: Code vulnerability scanning
         uses: anchore/scan-action@v3
@@ -49,3 +43,46 @@ jobs:
         run: |
           chmod +x gradlew
           ./gradlew build
+  package:
+    name: Package and Publish
+    if: ${{ github.ref == 'refs/heads/main' }}
+    needs: [ build ]
+    runs-on: ubuntu-22.04
+    permissions:
+      contents: read
+      packages: write
+      security-events: write
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v3
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 17
+          cache: gradle
+      - name: Build container image
+        run: |
+          chmod +x gradlew
+          ./gradlew bootBuildImage --imageName ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+      - name: OCI image vulnerability scanning
+        uses: anchore/scan-action@v3
+        id: scan
+        with:
+          image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+          fail-build: false
+          severity-cutoff: high
+          acs-report-enable: true
+      - name: Upload vulnerability report
+        uses: github/codeql-action/upload-sarif@v2
+        if: success() || failure()
+        with:
+          sarif_file: ${{ steps.scan.outputs.sarif }}
+      - name: Log into container registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish container image
+        run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
