--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
       uri: http://localhost:8888 # 설정 서버의 URL.
       request-connect-timeout: 5000 # 설정 서버에 연결될 때까지 기다리는 시간(밀리초)
       request-read-timeout: 5000 # 설정 서버에서 설정 데이터를 읽을 때까지 기다리는 시간(밀리초)
-      fail-fast: true # true이면 설정 서버 연결 실패를 치명적 오류로 인식. / 로컬 환경에서는 false.
+      fail-fast: false # true이면 설정 서버 연결 실패를 치명적 오류로 인식. / 로컬 환경에서는 false.
       retry:
         max-attempts: 6 # 시도 최대 횟수.
         initial-interval: 1000 # 최초 재시도 지연 시간(밀리초)
