--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -43,6 +43,13 @@ jobs:
         run: |
           chmod +x gradlew
           ./gradlew build
+      - name: Validate Kubernetes manifests
+        uses: stefanprodan/kube-tools@v1
+        with:
+          kubectl: 1.24.1
+          kubeval: 0.16.1
+          command: |
+            for %f in (k8s\*.yml k8s\*.yaml) do kubeval --strict %f
   package:
     name: Package and Publish
     if: ${{ github.ref == 'refs/heads/master' }}
