--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -48,9 +48,9 @@ jobs:
         uses: stefanprodan/kube-tools@v1
         with:
           kubectl: 1.24.3
-          kubeval: 0.16.1
+          kubeconform: 0.6.7
           command: |
-            kubeval --strict -d k8s
+            kubeconform --strict ./k8s
   package:
     name: Package and Publish
     if: ${{ github.ref == 'refs/heads/master' }}
