--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -47,6 +47,7 @@ jobs:
       - name: Validate Kubernetes manifests
         uses: stefanprodan/kube-tools@v1
         with:
+          working-directory: catalog-service
           kubectl: 1.24.3
           kubeconform: 0.6.7
           command: |
