--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -47,11 +47,10 @@ jobs:
       - name: Validate Kubernetes manifests
         uses: stefanprodan/kube-tools@v1
         with:
-          working-directory: catalog-service
           kubectl: 1.24.3
           kubeconform: 0.6.7
           command: |
-            kubeconform --strict ./k8s
+            kubeconform --strict k8s/*.yml k8s/*.yaml
   package:
     name: Package and Publish
     if: ${{ github.ref == 'refs/heads/master' }}
