--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -47,10 +47,10 @@ jobs:
       - name: Validate Kubernetes manifests
         uses: stefanprodan/kube-tools@v1
         with:
-          kubectl: 1.24.3
+          kubectl: 1.24.1
           kubeconform: 0.6.7
           command: |
-            kubeconform --strict k8s/*.yml k8s/*.yaml
+            kubeconform --strict ./k8s
   package:
     name: Package and Publish
     if: ${{ github.ref == 'refs/heads/master' }}
