--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -50,7 +50,7 @@ jobs:
           kubectl: 1.32.1
           kubeconform: 0.6.7
           command: |
-            kubeconform --strict ./k8s
+            kubeconform --strict ./catalog-service/k8s
   package:
     name: Package and Publish
     if: ${{ github.ref == 'refs/heads/master' }}
